fix: Scrolling on mobile

--- a/css/index.scss
+++ b/css/index.scss
@@ -1203,11 +1203,11 @@ footer {
 }
 
 #scroll-our-industries {
-  top: 283rem;
+  top: 295rem;
 }
 
 #scroll-contact {
-  top: 534rem;
+  top: 630rem;
 }
 
 /** ANIMATIONS **/
@@ -1559,6 +1559,26 @@ footer {
         margin-bottom: 12%;
       }
     }
+  }
+
+  #scroll-who-are-we {
+    top: 48rem;
+  }
+
+  #scroll-what-we-do {
+    top: 156rem;
+  }
+
+  #scroll-client-results {
+    top: 280rem;
+  }
+
+  #scroll-our-industries {
+    top: 332rem;
+  }
+
+  #scroll-contact {
+    top: 1053rem;
   }
 }
 
